--- a/V05.0.0-Course_detail/nbproject/project.properties
+++ b/V05.0.0-Course_detail/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.javax.mail-1.6.2.jar=D:\\jar\\javax.mail-1.6.2.jar
 file.reference.javax.mail-api-1.6.2.jar=D:\\jar\\javax.mail-api-1.6.2.jar
 file.reference.jaxb-api-2.1.jar=D:\\jar\\jaxb-api-2.1.jar
 file.reference.mailapi-1.6.2.jar=D:\\jar\\mailapi-1.6.2.jar
+file.reference.sqljdbc42.jar=D:\\Git\\V04\\Project_E-Learning\\lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -63,7 +64,8 @@ javac.classpath=\
     ${file.reference.javax.mail-1.6.2.jar}:\
     ${file.reference.javax.mail-api-1.6.2.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.mailapi-1.6.2.jar}
+    ${file.reference.mailapi-1.6.2.jar}:\
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
