--- a/Online_Learning_System/nbproject/project.properties
+++ b/Online_Learning_System/nbproject/project.properties
@@ -28,21 +28,20 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.commons-codec-1.10.jar=D:\\jar\\commons-codec-1.10.jar
-file.reference.commons-logging-1.2.jar=D:\\jar\\commons-logging-1.2.jar
-file.reference.fluent-hc-4.5.5.jar=D:\\jar\\fluent-hc-4.5.5.jar
-file.reference.gson-2.3.1.jar=D:\\jar\\gson-2.3.1.jar
-file.reference.gson-2.8.2.jar=D:\\jar\\gson-2.8.2.jar
-file.reference.httpclient-4.5.5.jar=D:\\jar\\httpclient-4.5.5.jar
-file.reference.httpcore-4.4.9.jar=D:\\jar\\httpcore-4.4.9.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\jar\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\jar\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.activation-1.2.0.jar=D:\\jar\\javax.activation-1.2.0.jar
-file.reference.javax.mail-1.6.2.jar=D:\\jar\\javax.mail-1.6.2.jar
-file.reference.javax.mail-api-1.6.2.jar=D:\\jar\\javax.mail-api-1.6.2.jar
-file.reference.jaxb-api-2.1.jar=D:\\jar\\jaxb-api-2.1.jar
-file.reference.mailapi-1.6.2.jar=D:\\jar\\mailapi-1.6.2.jar
-file.reference.sqljdbc42.jar=D:\\Git\\V04\\Project_E-Learning\\lib\\sqljdbc42.jar
+file.reference.activation-1.1.1.jar=../Lib/SendEmail/activation-1.1.1.jar
+file.reference.commons-logging-1.2.jar=../Lib/LoginWithGoogle/commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.13.jar=../Lib/LoginWithGoogle/fluent-hc-4.5.13.jar
+file.reference.gson-2.8.5.jar=../Lib/LoginWithGoogle/gson-2.8.5.jar
+file.reference.httpclient-4.5.13.jar=../Lib/LoginWithGoogle/httpclient-4.5.13.jar
+file.reference.httpcore-4.4.16.jar=../Lib/LoginWithGoogle/httpcore-4.4.16.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=../Lib/JSTL-JDBC/jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=../Lib/JSTL-JDBC/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail-api-1.6.2.jar=../Lib/SendEmail/javax.mail-api-1.6.2.jar
+file.reference.javax.mail.jar=../Lib/SendEmail/javax.mail.jar
+file.reference.jaxb-api-2.1.jar=../Lib/JSTL-JDBC/jaxb-api-2.1.jar
+file.reference.lombok-1.18.24.jar=../Lib/JSTL-JDBC/lombok-1.18.24.jar
+file.reference.mail-1.4.7.jar=../Lib/SendEmail/mail-1.4.7.jar
+file.reference.sqljdbc42.jar=../Lib/JSTL-JDBC/sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -52,21 +51,20 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-codec-1.10.jar}:\
-    ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.fluent-hc-4.5.5.jar}:\
-    ${file.reference.gson-2.3.1.jar}:\
-    ${file.reference.gson-2.8.2.jar}:\
-    ${file.reference.httpclient-4.5.5.jar}:\
-    ${file.reference.httpcore-4.4.9.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.javax.activation-1.2.0.jar}:\
-    ${file.reference.javax.mail-1.6.2.jar}:\
-    ${file.reference.javax.mail-api-1.6.2.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.mailapi-1.6.2.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.lombok-1.18.24.jar}:\
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.fluent-hc-4.5.13.jar}:\
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.httpclient-4.5.13.jar}:\
+    ${file.reference.httpcore-4.4.16.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.javax.mail-api-1.6.2.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.mail-1.4.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
