TuongPCHE171654 fix Lib

--- a/Online_Learning_System/nbproject/project.properties
+++ b/Online_Learning_System/nbproject/project.properties
@@ -28,20 +28,20 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.activation-1.1.1.jar=../Lib/SendEmail/activation-1.1.1.jar
-file.reference.commons-logging-1.2.jar=../Lib/LoginWithGoogle/commons-logging-1.2.jar
-file.reference.fluent-hc-4.5.13.jar=../Lib/LoginWithGoogle/fluent-hc-4.5.13.jar
-file.reference.gson-2.8.5.jar=../Lib/LoginWithGoogle/gson-2.8.5.jar
-file.reference.httpclient-4.5.13.jar=../Lib/LoginWithGoogle/httpclient-4.5.13.jar
-file.reference.httpcore-4.4.16.jar=../Lib/LoginWithGoogle/httpcore-4.4.16.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=../Lib/JSTL-JDBC/jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=../Lib/JSTL-JDBC/jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail-api-1.6.2.jar=../Lib/SendEmail/javax.mail-api-1.6.2.jar
-file.reference.javax.mail.jar=../Lib/SendEmail/javax.mail.jar
-file.reference.jaxb-api-2.1.jar=../Lib/JSTL-JDBC/jaxb-api-2.1.jar
-file.reference.lombok-1.18.24.jar=../Lib/JSTL-JDBC/lombok-1.18.24.jar
-file.reference.mail-1.4.7.jar=../Lib/SendEmail/mail-1.4.7.jar
-file.reference.sqljdbc42.jar=../Lib/JSTL-JDBC/sqljdbc42.jar
+file.reference.activation-1.1.1.jar=Lib/SendEmail/activation-1.1.1.jar
+file.reference.commons-logging-1.2.jar=Lib/LoginWithGoogle/commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.13.jar=Lib/LoginWithGoogle/fluent-hc-4.5.13.jar
+file.reference.gson-2.8.5.jar=Lib/LoginWithGoogle/gson-2.8.5.jar
+file.reference.httpclient-4.5.13.jar=Lib/LoginWithGoogle/httpclient-4.5.13.jar
+file.reference.httpcore-4.4.16.jar=Lib/LoginWithGoogle/httpcore-4.4.16.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=Lib/JSTL-JDBC/jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=Lib/JSTL-JDBC/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail-api-1.6.2.jar=Lib/SendEmail/javax.mail-api-1.6.2.jar
+file.reference.javax.mail.jar=Lib/SendEmail/javax.mail.jar
+file.reference.jaxb-api-2.1.jar=Lib/JSTL-JDBC/jaxb-api-2.1.jar
+file.reference.lombok-1.18.24.jar=Lib/JSTL-JDBC/lombok-1.18.24.jar
+file.reference.mail-1.4.7.jar=Lib/SendEmail/mail-1.4.7.jar
+file.reference.sqljdbc42.jar=Lib/JSTL-JDBC/sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
