--- a/V05.0.0-Course_detail/nbproject/project.properties
+++ b/V05.0.0-Course_detail/nbproject/project.properties
@@ -27,44 +27,42 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.commons-codec-1.10.jar=D:\\jar\\commons-codec-1.10.jar
-file.reference.commons-logging-1.2.jar=D:\\jar\\commons-logging-1.2.jar
-file.reference.fluent-hc-4.5.5.jar=D:\\jar\\fluent-hc-4.5.5.jar
-file.reference.gson-2.3.1.jar=D:\\jar\\gson-2.3.1.jar
-file.reference.gson-2.8.2.jar=D:\\jar\\gson-2.8.2.jar
-file.reference.httpclient-4.5.5.jar=D:\\jar\\httpclient-4.5.5.jar
-file.reference.httpcore-4.4.9.jar=D:\\jar\\httpcore-4.4.9.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\jar\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\jar\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.activation-1.2.0.jar=D:\\jar\\javax.activation-1.2.0.jar
-file.reference.javax.mail-1.6.2.jar=D:\\jar\\javax.mail-1.6.2.jar
-file.reference.javax.mail-api-1.6.2.jar=D:\\jar\\javax.mail-api-1.6.2.jar
-file.reference.jaxb-api-2.1.jar=D:\\jar\\jaxb-api-2.1.jar
-file.reference.mailapi-1.6.2.jar=D:\\jar\\mailapi-1.6.2.jar
-file.reference.sqljdbc42.jar=D:\\Git\\V04\\Project_E-Learning\\lib\\sqljdbc42.jar
+file.reference.activation-1.1.1.jar=D:\\PEOJECT_DEMO\\Lib\\SendEmail\\activation-1.1.1.jar
+file.reference.commons-logging-1.2.jar=D:\\PEOJECT_DEMO\\Lib\\LoginWithGoogle\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.13.jar=D:\\PEOJECT_DEMO\\Lib\\LoginWithGoogle\\fluent-hc-4.5.13.jar
+file.reference.gson-2.8.5.jar=D:\\PEOJECT_DEMO\\Lib\\LoginWithGoogle\\gson-2.8.5.jar
+file.reference.httpclient-4.5.13.jar=D:\\PEOJECT_DEMO\\Lib\\LoginWithGoogle\\httpclient-4.5.13.jar
+file.reference.httpcore-4.4.16.jar=D:\\PEOJECT_DEMO\\Lib\\LoginWithGoogle\\httpcore-4.4.16.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\PEOJECT_DEMO\\Lib\\JSTL-JDBC\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\PEOJECT_DEMO\\Lib\\JSTL-JDBC\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail-api-1.6.2.jar=D:\\PEOJECT_DEMO\\Lib\\SendEmail\\javax.mail-api-1.6.2.jar
+file.reference.javax.mail.jar=D:\\PEOJECT_DEMO\\Lib\\SendEmail\\javax.mail.jar
+file.reference.jaxb-api-2.1.jar=D:\\PEOJECT_DEMO\\Lib\\JSTL-JDBC\\jaxb-api-2.1.jar
+file.reference.lombok-1.18.24.jar=D:\\PEOJECT_DEMO\\Lib\\JSTL-JDBC\\lombok-1.18.24.jar
+file.reference.mail-1.4.7.jar=D:\\PEOJECT_DEMO\\Lib\\SendEmail\\mail-1.4.7.jar
+file.reference.sqljdbc42.jar=D:\\PEOJECT_DEMO\\Lib\\JSTL-JDBC\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=10-web
-j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.27.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.8-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar:${j2ee.server.home}/lib/websocket-client-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.27.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.7-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar:${j2ee.server.home}/lib/websocket-client-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.javax.mail-api-1.6.2.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.mail-1.4.7.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.fluent-hc-4.5.5.jar}:\
-    ${file.reference.gson-2.3.1.jar}:\
-    ${file.reference.gson-2.8.2.jar}:\
-    ${file.reference.httpclient-4.5.5.jar}:\
-    ${file.reference.httpcore-4.4.9.jar}:\
+    ${file.reference.fluent-hc-4.5.13.jar}:\
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.httpclient-4.5.13.jar}:\
+    ${file.reference.httpcore-4.4.16.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.javax.activation-1.2.0.jar}:\
-    ${file.reference.javax.mail-1.6.2.jar}:\
-    ${file.reference.javax.mail-api-1.6.2.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.mailapi-1.6.2.jar}:\
+    ${file.reference.lombok-1.18.24.jar}:\
     ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
