--- a/Online_Learning_System/nbproject/private/private.properties
+++ b/Online_Learning_System/nbproject/private/private.properties
@@ -1,17 +1,8 @@
-<<<<<<< HEAD
-deploy.ant.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=D:/Program Files/Apache Software Foundation/apache-tomcat-10.1.24
+
+deploy.ant.properties.file=C:\\Users\\tuong\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\17\\build.properties
-=======
-deploy.ant.properties.file=C:\\Users\\tuong\\AppData\\Roaming\\NetBeans\\21\\tomcat101.properties
-j2ee.server.home=D:/Program Files/Apache Software Foundation/apache-tomcat-10.1.24
-j2ee.server.instance=tomcat101:home=D:\\Program Files\\Apache Software Foundation\\apache-tomcat-10.1.24
-javac.debug=true
-javadoc.preview=true
-selected.browser=default
-user.properties.file=C:\\Users\\tuong\\AppData\\Roaming\\NetBeans\\21\\build.properties
->>>>>>> bfe2a7614c11554cba50647492ed043709dcbdfe
+user.properties.file=C:\\Users\\tuong\\AppData\\Roaming\\NetBeans\\17\\build.properties
