TuongPCHE171654 fix bug lougout, course_page

--- a/V5.1.1/nbproject/project.properties
+++ b/V5.1.1/nbproject/project.properties
@@ -34,7 +34,6 @@ file.reference.fluent-hc-4.5.13.jar=Lib/LoginWithGoogle/fluent-hc-4.5.13.jar
 file.reference.gson-2.8.5.jar=Lib/LoginWithGoogle/gson-2.8.5.jar
 file.reference.httpclient-4.5.13.jar=Lib/LoginWithGoogle/httpclient-4.5.13.jar
 file.reference.httpcore-4.4.16.jar=Lib/LoginWithGoogle/httpcore-4.4.16.jar
-file.reference.jakarta.servlet-api-5.0.0.jar=D:\\jar\\jakarta.servlet-api-5.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=Lib/JSTL-JDBC/jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=Lib/JSTL-JDBC/jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail-api-1.6.2.jar=Lib/SendEmail/javax.mail-api-1.6.2.jar
@@ -65,8 +64,7 @@ javac.classpath=\
     ${file.reference.activation-1.1.1.jar}:\
     ${file.reference.javax.mail-api-1.6.2.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.mail-1.4.7.jar}:\
-    ${file.reference.jakarta.servlet-api-5.0.0.jar}
+    ${file.reference.mail-1.4.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
