add lib youtube and add comment function two class comment

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /V06.0.0-Create_Quiz/build/
 /V06.0.0-Create_Quiz/nbproject/private/
 /V05.0.0-Course_detail/build/
+/V05.1.2_MergeCodeComentAndWishList/build/
