Nguyen add Wishlist

--- a/V05.1.2_MergeCodeComentAndWishList/nbproject/project.properties
+++ b/V05.1.2_MergeCodeComentAndWishList/nbproject/project.properties
@@ -28,25 +28,27 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.activation-1.1.1.jar=Lib/SendEmail/activation-1.1.1.jar
-file.reference.commons-logging-1.2.jar=Lib/LoginWithGoogle/commons-logging-1.2.jar
-file.reference.fluent-hc-4.5.13.jar=Lib/LoginWithGoogle/fluent-hc-4.5.13.jar
-file.reference.google-api-client-1.22.0.jar=..\\Lib\\YouTubeApiDuration\\google-api-client-1.22.0.jar
-file.reference.google-api-services-youtube-v3-rev182-1.22.0.jar=..\\Lib\\YouTubeApiDuration\\google-api-services-youtube-v3-rev182-1.22.0.jar
-file.reference.google-http-client-1.20.0.jar=..\\Lib\\YouTubeApiDuration\\google-http-client-1.20.0.jar
-file.reference.google-http-client-jackson2-1.20.0.jar=..\\Lib\\YouTubeApiDuration\\google-http-client-jackson2-1.20.0.jar
-file.reference.gson-2.8.5.jar=Lib/LoginWithGoogle/gson-2.8.5.jar
-file.reference.httpclient-4.5.13.jar=Lib/LoginWithGoogle/httpclient-4.5.13.jar
-file.reference.httpcore-4.4.16.jar=Lib/LoginWithGoogle/httpcore-4.4.16.jar
+file.reference.activation-1.1.1.jar=D:\\SWP391\\lib_new\\Lib\\SendEmail\\activation-1.1.1.jar
+file.reference.commons-logging-1.2.jar=D:\\SWP391\\lib_new\\Lib\\LoginWithGoogle\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.13.jar=D:\\SWP391\\lib_new\\Lib\\LoginWithGoogle\\fluent-hc-4.5.13.jar
+file.reference.google-api-client-1.22.0.jar=D:\\SWP391\\lib_new\\Lib\\YouTubeApiDuration\\google-api-client-1.22.0.jar
+file.reference.google-api-services-youtube-v3-rev182-1.22.0.jar=D:\\SWP391\\lib_new\\Lib\\YouTubeApiDuration\\google-api-services-youtube-v3-rev182-1.22.0.jar
+file.reference.google-http-client-1.20.0.jar=D:\\SWP391\\lib_new\\Lib\\YouTubeApiDuration\\google-http-client-1.20.0.jar
+file.reference.google-http-client-jackson2-1.20.0.jar=D:\\SWP391\\lib_new\\Lib\\YouTubeApiDuration\\google-http-client-jackson2-1.20.0.jar
+file.reference.gson-2.8.5.jar=D:\\SWP391\\lib_new\\Lib\\LoginWithGoogle\\gson-2.8.5.jar
+file.reference.httpclient-4.5.13.jar=D:\\SWP391\\lib_new\\Lib\\LoginWithGoogle\\httpclient-4.5.13.jar
+file.reference.httpcore-4.4.16.jar=D:\\SWP391\\lib_new\\Lib\\LoginWithGoogle\\httpcore-4.4.16.jar
+file.reference.jackson-core-2.0.0.jar=D:\\SWP391\\lib_new\\Lib\\YouTubeApiDuration\\jackson-core-2.0.0.jar
 file.reference.jakarta.servlet-api-5.0.0.jar=D:\\jar\\jakarta.servlet-api-5.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=Lib/JSTL-JDBC/jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=Lib/JSTL-JDBC/jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail-api-1.6.2.jar=Lib/SendEmail/javax.mail-api-1.6.2.jar
-file.reference.javax.mail.jar=Lib/SendEmail/javax.mail.jar
-file.reference.jaxb-api-2.1.jar=Lib/JSTL-JDBC/jaxb-api-2.1.jar
-file.reference.lombok-1.18.24.jar=Lib/JSTL-JDBC/lombok-1.18.24.jar
-file.reference.mail-1.4.7.jar=Lib/SendEmail/mail-1.4.7.jar
-file.reference.sqljdbc42.jar=Lib/JSTL-JDBC/sqljdbc42.jar
+file.reference.jakarta.servlet-api-5.0.0.jar-1=D:\\SWP391\\lib_new\\Lib\\JSTL-JDBC\\jakarta.servlet-api-5.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\SWP391\\lib_new\\Lib\\JSTL-JDBC\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\SWP391\\lib_new\\Lib\\JSTL-JDBC\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail-api-1.6.2.jar=D:\\SWP391\\lib_new\\Lib\\SendEmail\\javax.mail-api-1.6.2.jar
+file.reference.javax.mail.jar=D:\\SWP391\\lib_new\\Lib\\SendEmail\\javax.mail.jar
+file.reference.jaxb-api-2.1.jar=D:\\SWP391\\lib_new\\Lib\\JSTL-JDBC\\jaxb-api-2.1.jar
+file.reference.lombok-1.18.24.jar=D:\\SWP391\\lib_new\\Lib\\JSTL-JDBC\\lombok-1.18.24.jar
+file.reference.mail-1.4.7.jar=D:\\SWP391\\lib_new\\Lib\\SendEmail\\mail-1.4.7.jar
+file.reference.sqljdbc42.jar=D:\\SWP391\\lib_new\\Lib\\JSTL-JDBC\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -56,6 +58,8 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
+    ${file.reference.jakarta.servlet-api-5.0.0.jar}:\
+    ${file.reference.jakarta.servlet-api-5.0.0.jar-1}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
@@ -70,11 +74,11 @@ javac.classpath=\
     ${file.reference.javax.mail-api-1.6.2.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.mail-1.4.7.jar}:\
-    ${file.reference.jakarta.servlet-api-5.0.0.jar}:\
     ${file.reference.google-api-client-1.22.0.jar}:\
     ${file.reference.google-api-services-youtube-v3-rev182-1.22.0.jar}:\
     ${file.reference.google-http-client-1.20.0.jar}:\
-    ${file.reference.google-http-client-jackson2-1.20.0.jar}
+    ${file.reference.google-http-client-jackson2-1.20.0.jar}:\
+    ${file.reference.jackson-core-2.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
