--- a/V05.1.2_MergeCodeComentAndWishList/nbproject/project.properties
+++ b/V05.1.2_MergeCodeComentAndWishList/nbproject/project.properties
@@ -40,9 +40,6 @@ file.reference.google-http-client-jackson2-1.20.0.jar=../Lib/YouTubeApiDuration/
 file.reference.gson-2.8.5.jar=../Lib/LoginWithGoogle/gson-2.8.5.jar
 file.reference.httpclient-4.5.13.jar=../Lib/LoginWithGoogle/httpclient-4.5.13.jar
 file.reference.httpcore-4.4.16.jar=../Lib/LoginWithGoogle/httpcore-4.4.16.jar
-file.reference.jackson-annotations-2.15.2.jar=../Lib/YouTubeApiDuration/jackson-annotations-2.15.2.jar
-file.reference.jackson-core-2.15.2.jar=../Lib/YouTubeApiDuration/jackson-core-2.15.2.jar
-file.reference.jackson-databind-2.15.2.jar=../Lib/YouTubeApiDuration/jackson-databind-2.15.2.jar
 file.reference.jakarta.servlet-api-5.0.0.jar=../Lib/JSTL-JDBC/jakarta.servlet-api-5.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=../Lib/JSTL-JDBC/jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=../Lib/JSTL-JDBC/jakarta.servlet.jsp.jstl-api-2.0.0.jar
@@ -79,10 +76,7 @@ javac.classpath=\
     ${file.reference.google-api-client-1.22.0.jar}:\
     ${file.reference.google-api-services-youtube-v3-rev182-1.22.0.jar}:\
     ${file.reference.google-http-client-1.20.0.jar}:\
-    ${file.reference.google-http-client-jackson2-1.20.0.jar}:\
-    ${file.reference.jackson-annotations-2.15.2.jar}:\
-    ${file.reference.jackson-core-2.15.2.jar}:\
-    ${file.reference.jackson-databind-2.15.2.jar}
+    ${file.reference.google-http-client-jackson2-1.20.0.jar}
     ${file.reference.jackson-annotations-2.15.2.jar}:\
     ${file.reference.jackson-core-2.15.2.jar}:\
     ${file.reference.jackson-databind-2.15.2.jar}
