--- a/V05.1.2_MergeCodeComentAndWishList/web/WEB-INF/web.xml
+++ b/V05.1.2_MergeCodeComentAndWishList/web/WEB-INF/web.xml
@@ -33,8 +33,12 @@
         <servlet-class>Controller.lessonServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>abc</servlet-name>
-        <servlet-class>Controller.User.abc</servlet-class>
+        <servlet-name>CourseManageServlet</servlet-name>
+        <servlet-class>Controller.User.Manager.CourseManageServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdateCourse</servlet-name>
+        <servlet-class>Controller.User.Manager.UpdateCourseServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>LoginGoogleHandler</servlet-name>
@@ -69,8 +73,12 @@
         <url-pattern>/lesson</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>abc</servlet-name>
-        <url-pattern>/user/abc</url-pattern>
+        <servlet-name>CourseManageServlet</servlet-name>
+        <url-pattern>/course-manage</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateCourse</servlet-name>
+        <url-pattern>/UpdateCourse</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>
