--- a/Online_Learning_System/web/WEB-INF/web.xml
+++ b/Online_Learning_System/web/WEB-INF/web.xml
@@ -52,6 +52,10 @@
         <servlet-name>UpdateCourse</servlet-name>
         <servlet-class>Controller.User.Manager.UpdateCourseServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ModuleManagerServlet</servlet-name>
+        <servlet-class>Controller.User.Manager.ModuleManagerServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginGoogleHandler</servlet-name>
         <url-pattern>/google</url-pattern>
@@ -103,6 +107,10 @@
     <servlet-mapping>
         <servlet-name>ControllerQuestionServlet</servlet-name>
         <url-pattern>/controller</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ModuleManagerServlet</servlet-name>
+        <url-pattern>/ModuleManager</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>
