HungHT add new deletequiz

--- a/Online_Learning_System/nbproject/private/private.properties
+++ b/Online_Learning_System/nbproject/private/private.properties
@@ -1,9 +1,4 @@
-
-<<<<<<< HEAD
-deploy.ant.properties.file=C:\\Users\\tuong\\AppData\\Roaming\\NetBeans\\21\\tomcat101.properties
-=======
-deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
->>>>>>> d04aab8aef7fa06220f171fbc97f6541a09ace4b
+deploy.ant.properties.file=C:\\Users\\hatro\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
@@ -11,9 +6,4 @@ j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundatio
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-<<<<<<< HEAD
-user.properties.file=C:\\Users\\tuong\\AppData\\Roaming\\NetBeans\\21\\build.properties
-=======
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
-
->>>>>>> d04aab8aef7fa06220f171fbc97f6541a09ace4b
+user.properties.file=C:\\Users\\hatro\\AppData\\Roaming\\NetBeans\\17\\build.properties
