--- a/Online_Learning_System/nbproject/private/private.properties
+++ b/Online_Learning_System/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 deploy.ant.properties.file=C:\\Users\\tuong\\AppData\\Roaming\\NetBeans\\21\\tomcat101.properties
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
+j2ee.server.home=D:/Program Files/Apache Software Foundation/apache-tomcat-10.1.24
 j2ee.server.home=D:/Program Files/Apache Software Foundation/apache-tomcat-10.1.24
 j2ee.server.instance=tomcat101:home=D:\\Program Files\\Apache Software Foundation\\apache-tomcat-10.1.24
 javac.debug=true
