--- a/Online_Learning_System/nbproject/private/private.properties
+++ b/Online_Learning_System/nbproject/private/private.properties
@@ -5,6 +5,6 @@ j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=Chrome
+selected.browser=default
 user.properties.file=C:\\Users\\hatro\\AppData\\Roaming\\NetBeans\\17\\build.properties
 
