Recover Capcha jsp

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /V05.0.0-Course_detail/build/
 /V05.1.2_MergeCodeComentAndWishList/build/
 /Online_Learning_System/build/
+/Online_Learning_System/nbproject/private/
