--- a/Online_Learning_System/nbproject/private/private.properties
+++ b/Online_Learning_System/nbproject/private/private.properties
@@ -6,6 +6,6 @@ j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundatio
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\hatro\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
 
 
